H3CIPMSJAVA-20180830/src/objects/CE_Revisit__c.object
<CustomObject>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <label>Arrival Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Revisit_DAH__c</fullName>
        <formula>(Leave_Date__c -  Arrival_Date__c)*24</formula>
        <label>Revisit DAH</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Revisit_DLH__c</fullName>
        <formula>CSC_Report_Revisit_DAH__c + CSC_Report_Revisit_Travel_Time__c</formula>
        <label>Revisit DLH</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Revisit_Travel_Time__c</fullName>
        <formula>( Arrival_Date__c-  Enroute_Date__c )*24</formula>
        <label>Revisit Travel Time</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Datetime__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Creater_EmployeeId__c</fullName>
        <formula>CreatedBy.Employee_ID__c</formula>
        <label>Creater EmployeeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creater_Loginname__c</fullName>
        <formula>CreatedBy.Username</formula>
        <label>Creater Loginname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creater_Workgroup__c</fullName>
        <formula>TEXT( CreatedBy.Workgroup__c )</formula>
        <label>Creater Workgroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enroute_Date__c</fullName>
        <label>Enroute Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enroute_Location__c</fullName>
        <description>重访，进展出发地点</description>
        <label>Enroute Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fix_Location__c</fullName>
        <description>重访，进展修复地点</description>
        <label>Fix Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LabourTime__c</fullName>
        <description>Leave_Date__c-Arrival_Date__c
(Leave_Date__c - Arrival_Date__c)*24 + VALUE(MID(TEXT(Leave_Date__c),12,2)) - VALUE(MID(TEXT(Arrival_Date__c),12,2)) + (( VALUE(MID(TEXT(Leave_Date__c),15,2)) - VALUE(MID(TEXT(Arrival_Date__c),15,2)))/60)</description>
        <formula>(Leave_Date__c - Arrival_Date__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LabourTime</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leave_DateSecond__c</fullName>
        <formula>TEXT(Leave_Date__c)</formula>
        <label>Leave DateSecond</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leave_Date__c</fullName>
        <label>Leave Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Leave_Location__c</fullName>
        <description>重访，进展 离开地点</description>
        <label>Leave Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NGMS_DurationTag__c</fullName>
        <label>NGMS DurationTag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>true</fullName>
                    <default>true</default>
                    <label>true</label>
                </value>
                <value>
                    <fullName>false</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Date__c</fullName>
        <label>Repair Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Revisit_Date__c</fullName>
        <label>Revisit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Revisit_Progress__c</fullName>
        <description>重访进展</description>
        <label>Revisit_Progress</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enroute</fullName>
                </value>
                <value>
                    <fullName>Start &amp; Arrival</fullName>
                </value>
                <value>
                    <fullName>Fix</fullName>
                </value>
                <value>
                    <fullName>Finish &amp; Leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Locaiton__c</fullName>
        <description>重访，进展开始地点</description>
        <label>Start Locaiton</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>CE Revisit</relationshipLabel>
        <relationshipName>CE_Revisit</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>testH__c</fullName>
        <description>(VALUE(MID(TEXT(Leave_Date__c),15,2)) - VALUE(MID(TEXT(Arrival_Date__c),15,2))) + (VALUE(MID(TEXT(Leave_Date__c),12,2)) - VALUE(MID(TEXT(Arrival_Date__c),12,2))) * 60 +</description>
        <formula>(Leave_Date__c - Arrival_Date__c) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>testH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>CE Revisit</label>
    <nameField>
        <displayFormat>CRN-{YYYYMMDD}-{00000000}</displayFormat>
        <label>CE Revisit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>